--- a/qPedido/WebContent/paginas/index.html
+++ b/qPedido/WebContent/paginas/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<script type="text/javascript">
-		window.location = "./paginas/index.ido" 
+		window.location = "./paginas/index.proj" 
 	</script>
 </body>
 </html>
