Ajustes no CRUD de mesas, na geração do qrcode, e em alguns estilos.

--- a/qPedido/WebContent/paginas/empresa/cadastrarEmpresa.xhtml
+++ b/qPedido/WebContent/paginas/empresa/cadastrarEmpresa.xhtml
@@ -15,6 +15,9 @@
 	<ui:param name="headerConteudo" value="#{bundle.empresaCadastroTitulo}" />
 	<ui:param name="bean" value="#{empresaBean}" />
 	<ui:param name="actionSalvar" value="actionSalvar" />
+	<f:metadata>
+		<f:event type="preRenderView" listener="#{homeBean.verificaSessaoValida}" />
+	</f:metadata>
 	<ui:define name="conteudo">
 		<h:panelGrid id="grid" columns="2" layout="block">
 			<p:outputLabel value="#{bundle.empresaNome}:" 
