--- a/qPedido/WebContent/paginas/erro/Erro.xhtml
+++ b/qPedido/WebContent/paginas/erro/Erro.xhtml
@@ -12,7 +12,7 @@
 			<p:graphicImage id="imagem" value="/resources/atencao.jpg" />
 			<br /> <br />
 			<h:outputLabel
-				value="Ocorreu um erro inesperado. Por favor informe ao CPD."
+				value="Ocorreu um erro inesperado."
 				styleClass="titulo" />
 			<p:messages closable="true" id="msgs" showDetail="false" />
 		</div>
