--- a/qPedido/WebContent/paginas/mesa/cadastrarMesa.xhtml
+++ b/qPedido/WebContent/paginas/mesa/cadastrarMesa.xhtml
@@ -14,12 +14,65 @@
 <ui:composition template="/paginas/masterPage.xhtml">
 	<ui:param name="headerConteudo" value="#{bundle.mesa_cadastroTitulo}" />
 	<ui:param name="bean" value="#{mesaBean}" />
+	<ui:param name="actionVoltar" value="actionVoltar" />
 	<ui:param name="actionSalvar" value="actionSalvar" />
+	<ui:param name="mostraSalvar" value="S" />
+	<f:metadata>
+		<f:event type="preRenderView"
+			listener="#{mesaBean.verificaSessaoValida}" />
+	</f:metadata>
 	<ui:define name="conteudo">
-		<h:panelGrid id="grid" columns="2" layout="block">
-			
 
-		</h:panelGrid>
+		<!-- 	<h:panelGrid id="grid" columns="2" layout="block" style="text-align:center;"/> -->
+
+			<h:panelGroup>
+				<h:graphicImage width="15%" value="/resources/mesa.png" />
+			</h:panelGroup>
+
+			<br />
+
+			<h:panelGroup id="pngNumeroMesa">
+				<p:outputLabel value="#{bundle.mesa_numeroMesa}:" for="numeroMesa"
+					styleClass="OutputLabelCampo"
+					style="width:60px; font-size:15px;margin-left:-100px;" />
+				<p:inputNumber id="numeroMesa" required="true" thousandSeparator=""
+					decimalPlaces="0" decimalSeparator="" maxValue="999" size="10"
+					requiredMessage="#{bundle.campoObrigatorio} : #{bundle.mesa_numeroMesa}"
+					value="#{mesaBean.mesa.numero}" />
+
+			</h:panelGroup>
+
+			<br />
+			<p:spacer height="30" width="0"></p:spacer>
+
+			<h:panelGroup id="pngCadeiras" >
+				<p:outputLabel value="#{bundle.mesa_qtdCadeiras}:" for="qtdCadeiras"
+					styleClass="OutputLabelCampo"
+					style="width:60px; font-size:15px;margin-left:-100px;" />
+				<p:inputNumber id="qtdCadeiras" required="true" thousandSeparator=""
+					decimalPlaces="0" decimalSeparator="" maxValue="99" size="10"
+					requiredMessage="#{bundle.campoObrigatorio} : #{bundle.mesa_qtdCadeiras}"
+					value="#{mesaBean.mesa.qtdCadeiras}" />
+
+			</h:panelGroup>
+
+			<br />
+			
+			<p:spacer height="30" width="0" rendered="#{mesaBean.mesa.qrcode != null}"></p:spacer>
+
+			<h:panelGroup rendered="#{mesaBean.mesa.qrcode != null}">
+				<p:graphicImage width="15%" value="#{mesaBean.qrCodeImg}" />
+			</h:panelGroup>
+
+			<br />
+
+			<h:panelGroup rendered="false">
+				<p:commandButton id="btnSalvar" value="#{bundle.salvarRegistro}"
+					 style="margin-top:20px;"
+					 actionListener="#{mesaBean.actionSalvar}" />
+			</h:panelGroup>
+
+
 	</ui:define>
 </ui:composition>
 </html>
