--- a/qPedido/WebContent/paginas/home.xhtml
+++ b/qPedido/WebContent/paginas/home.xhtml
@@ -13,7 +13,14 @@
 </h:head>
 <ui:composition template="/paginas/masterPage.xhtml">
 	<ui:param name="headerConteudo" value="Home" />
+	<ui:param name="bean" value="#{homeBean}" />
+	<ui:param name="actionNovo" value="actionNovo" />
+	<f:metadata>
+		<f:event type="preRenderView" listener="#{homeBean.verificaSessaoValida}" />
+	</f:metadata>
 	<ui:define name="conteudo">
+	
+	<p:outputLabel value="#{homeBean.usuarioLogado.usuario.nome}"></p:outputLabel>
 
 	</ui:define>
 </ui:composition>
