--- a/qPedido/WebContent/paginas/login.xhtml
+++ b/qPedido/WebContent/paginas/login.xhtml
@@ -65,7 +65,7 @@
 		<p:messages closable="true" globalOnly="true" id="msgs" />
 		<div align="center">
 			<p:panel id="loginPanel" style=" text-align: center; border: none">
-				<h:outputLabel value="Login" styleClass="titulo" />
+				<h:outputLabel value="Login" styleClass="tituloProjeto" />
 				<hr></hr>
 				<br></br>
 				<h:panelGroup >
