--- a/qPedido/WebContent/paginas/masterPage.xhtml
+++ b/qPedido/WebContent/paginas/masterPage.xhtml
@@ -119,7 +119,7 @@
 							onclick="$('#btAlterarSecret').click();"
 							process="@this,:formCenter" />
 						<p:menuitem value="#{bundle.excluirRegistro}"
-							onclick="$('#btExcluirSecret').click();"
+							onclick="$('#btExcluirSecret').click();" style="display: none;"
 							process="@this,:formCenter" disabled="#{empty actionExcluir}"
 							icon="ui-icon-close" />
 						<p:menuitem value="#{bundle.voltarTela}"
@@ -140,7 +140,7 @@
 
 			<h:form id="formCenter" prependId="false">
 				<div align="center">
-					<p:panel id="conteudo">
+					<p:panel id="conteudo" >
 						<div class="clear" id="div_pre_conteudo">
 							<p:messages closable="true" id="msgs" />
 						</div>
@@ -148,14 +148,14 @@
 						<div class="clear" id="div_pos_conteudo" />
 						<p:commandButton id="btSalvarSecret" widgetVar="btSalvarSecret"
 							action="#{bean[actionSalvar]}" style="margin-top:15px"
-							rendered="#{mostraSalvar eq 'S'}" type="Secret"
+							rendered="#{acao eq 'S'}" type="Secret" 
 							update="conteudo, msgs" value="#{bundle.salvarRegistro}" />
-						<p:commandButton id="btAlterarSecret" widgetVar="btAlterarSecret"
-							action="#{bean[actionAlterar]}" style="display: none;"
-							type="Secret" update="conteudo" />
+						<p:commandButton id="btAlterarSecret" widgetVar="btAlterarSecret" icon="ui-icon-refresh"
+							action="#{bean[actionAlterar]}" rendered="#{acao eq 'A' or acao eq 'AE'}" style="margin-top:15px"
+							type="Secret" update="conteudo" value="#{bundle.alterarRegistro}" />
 						<p:commandButton id="btExcluirSecret" widgetVar="btExcluirSecret"
-							action="#{bean[actionExcluir]}" style="display: none;"
-							type="Secret" update="conteudo">
+							action="#{bean[actionExcluir]}"  style="margin-top:15px; margin-left:15px;" rendered="#{acao eq 'AE'}"
+							type="Secret" update="conteudo"  value="#{bundle.excluirRegistro}">
 							<p:confirm header="#{bundle.confirmacao}"
 								message="#{bundle.msgConfirmacaoExcluir}" icon="ui-icon-alert" />
 						</p:commandButton>
