--- a/qPedido/WebContent/paginas/mesa/consultarMesa.xhtml
+++ b/qPedido/WebContent/paginas/mesa/consultarMesa.xhtml
@@ -18,36 +18,36 @@
 	<ui:param name="actionNovo" value="actionNovo" />
 	<ui:param name="actionAlterar" value="actionAlterar" />
 	<f:metadata>
-		<f:event type="preRenderView" listener="#{mesaBean.verificaSessaoValida}" />
+		<f:event type="preRenderView"
+			listener="#{mesaBean.verificaSessaoValida}" />
 	</f:metadata>
 	<ui:define name="conteudo">
-	
 
-				 <p:dataGrid var="mesa" value="#{mesaBean.listaMesas}"
-					columns="6" layout="grid" paginator="false" id="sistemas"
-					emptyMessage="Nenhuma mesa encontrada"
-					style="top: 200px; width:100%;border:0px!important; background-color: transparent; margin-top: 40px;">
 
-					<h:link  id="clEditar" immediate="true" process="@this"
-						style="border:5px; width: 200px" ajax="false" outcome="alterarMesa.proj"
-						update="msgs,grow" >
-						<p:panelGrid columns="1" layout="grid"
-							styleClass="ui-panelgrid-blank"
-							style="text-align:center;border:0px;">
-						 	<f:facet name="header">
-							<!--	<p:graphicImage value="#{sistema.iconeStream}"
+		<p:dataGrid var="mesa" value="#{mesaBean.listaMesas}" columns="6"
+			layout="grid" paginator="false" id="mesas"
+			emptyMessage="Nenhuma mesa encontrada" styleClass="tabela"
+			style="top: 200px; width:100%; 
+					background-color: transparent; margin-top: 10px;">
+
+			<h:link id="clEditar" immediate="true" process="@this"
+				style="width:200px;" ajax="false" outcome="alterarMesa.proj"
+				update="msgs,grow">
+				<p:panelGrid columns="1" layout="grid"
+					styleClass="ui-panelgrid-blank"
+					style="text-align:center; border-style: solid; border-width: 3%; border-color: #101466; margin-bottom:15px;  border-radius: 5px;">
+					<f:facet name="header">
+						<!--	<p:graphicImage value="#{sistema.iconeStream}"
 									rendered="#{sistema.iconeStream != null}" cache="false"
 									stream="false" />-->
-								<h:graphicImage  width="55%"
-									value="/resources/mesa.png" />
-							</f:facet> 
-							<h2 style="font-size: 140%">MESA #{mesa.numero}</h2>
-						</p:panelGrid>
-						<f:param name="codMesa" value="#{mesa.codigo}" />
-					
-					</h:link>
+						<h:graphicImage width="55%" value="/resources/mesa.png" />
+					</f:facet>
+					<h2 style="font-size: 120%">MESA #{mesa.numero}</h2>
+				</p:panelGrid>
+				<f:param name="codMesa" value="#{mesa.codigo}" />
+			</h:link>
 
-				</p:dataGrid> 
+		</p:dataGrid>
 
 
 
