--- a/qPedido/WebContent/paginas/mesa/cadastrarMesa.xhtml
+++ b/qPedido/WebContent/paginas/mesa/cadastrarMesa.xhtml
@@ -27,10 +27,11 @@
 		<!-- 	<h:panelGrid id="grid" columns="2" layout="block" style="text-align:center;"/> -->
 
 		<h:panelGroup>
-			<h:graphicImage width="15%" value="/resources/mesa.png" />
+			<h:graphicImage width="15%" value="/resources/mesa.png"  style="border-style: solid; border-width: 3px; border-color: #101466;"/>
 		</h:panelGroup>
-
-		<br />
+	<br />
+		
+		<p:spacer height="30" width="0"></p:spacer>
 
 		<h:panelGroup id="pngNumeroMesa">
 			<p:outputLabel value="#{bundle.mesa_numeroMesa}:" for="numeroMesa"
