--- a/qPedido/WebContent/paginas/mesa/consultarMesa.xhtml
+++ b/qPedido/WebContent/paginas/mesa/consultarMesa.xhtml
@@ -31,11 +31,11 @@
 					background-color: transparent; margin-top: 10px;">
 
 			<h:link id="clEditar" immediate="true" process="@this"
-				style="width:200px;" ajax="false" outcome="alterarMesa.proj"
+				 ajax="false" outcome="alterarMesa.proj"
 				update="msgs,grow">
 				<p:panelGrid columns="1" layout="grid"
 					styleClass="ui-panelgrid-blank"
-					style="text-align:center; border-style: solid; border-width: 3%; border-color: #101466; margin-bottom:15px;  border-radius: 5px;">
+					style="text-align:center; border-style: solid; border-width: 3%; border-color: transparent; margin-bottom:15px;  border-radius: 5px;">
 					<f:facet name="header">
 						<!--	<p:graphicImage value="#{sistema.iconeStream}"
 									rendered="#{sistema.iconeStream != null}" cache="false"
